# CSCI-576-starter-code

./: .gitignore
ImageDisplay_C++_cross_platform/: .gitignore  CMakeLists.txt  README.md
ImageDisplay_C++_cross_platform/dependency/wxWidgets/: CMakeLists.txt  xmake.lua
ImageDisplay_C++_cross_platform/dependency/wxWidgets/src/osx/carbon/: dcscreen.cpp
ImageDisplay_C++_cross_platform/src/: Main.cpp
ImageDisplay_C++_windows/: CMakeLists.txt
